[frontend]Fix for sidebar accordian collapse icon failing in safari
(cherry picked from commit a17018316763715950edb910d5564d18aa1b5969)

--- a/desktop/core/src/desktop/js/components/sidebar/sidebar.scss
+++ b/desktop/core/src/desktop/js/components/sidebar/sidebar.scss
@@ -300,6 +300,8 @@
   position: absolute;
   top: 13px;
   left: 6px;
+  width: 1em;
+  height: 1em;
   transition: transform $sidebar-animation-duration-base;
 
   svg {
